# telegram_bot

./: .gitignore  README._preview.html  README.md  pyproject.toml  telegram_data.db  test_gmail.py  view_md.py
.github/workflows/: ci.yml
apps/app00/: bots_config.json  dashboard.py
apps/app01/: bot.py
apps/app02/: streamlit_app.py
apps/gmail/: bot.py  gmail_client.py  oauth_server.py  streamlit_app.py  telegram_commands.py
apps/pdf_chat/: __init__.py  telegram_commands.py
apps/quran/: bot.py  streamlit_app.py
src/bots/gmail_bot/: app.py
src/bots/pdf_bot/: app.py
src/bots/quran_bot/: app.py
src/bots/youtube_bot/: app.py
src/telegram/: bot.py  chat_bot.py  db.py  streamlit_panel.py  telegram_fetch.py  telegram_utils.py  user_store.py
src/telegram/panel/: __init__.py  environment.py  scheduler.py  telegram_fetch.py  ui_layout.py
src/telegram/panel/ui/: __init__.py  layout.py  sidebar.py  tab_alert.py  tab_info.py  tab_media.py  tab_schedule.py  tab_text.py  tab_users.py
test/: get_chat_id.py  send_m.py  test_pro_features.py
tests/: __init__.py  test_bot.py  test_pro_features.py
